<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingLeft="15sp"
    android:paddingRight="15sp"
    app:theme="@style/AppTheme"
    android:paddingTop="15sp"
    android:paddingBottom="15sp"
    tools:context="com.testing.alcatel.alufieldtesting.MobilityTests"
    android:weightSum="1">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:orientation="horizontal"
        android:paddingTop="15sp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gsm"
            android:id="@+id/gsm"
            android:textColor="@color/purple"
            android:textSize="15sp"
            android:textStyle="bold" />
        <Switch
            android:id="@+id/gsm_switch"
            android:layout_marginLeft="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="15sp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wcdma"
            android:id="@+id/wcdma"
            android:textColor="@color/purple"
            android:textSize="15sp"
            android:textStyle="bold" />
        <Switch

            android:id="@+id/wcdma_switch"
            android:layout_marginLeft="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="15sp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/both"
            android:id="@+id/both"
            android:textColor="@color/purple"
            android:textSize="15sp"
            android:textStyle="bold" />
        <Switch

            android:id="@+id/both_switch"
            android:layout_marginLeft="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text=" Default Settings "
        android:paddingTop="5dp"
        android:paddingBottom="7dp"
        android:textColor="@color/purple"
        android:background="#33d8d8d8"
        android:id="@+id/settings"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/network"
        android:paddingTop="5dp"
        android:paddingBottom="7dp"
        android:textColor="@color/purple"
        android:background="#33d8d8d8"
        android:id="@+id/network"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    </LinearLayout>