<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingLeft="15sp"
    android:paddingRight="15sp"
    app:theme="@style/AppTheme"
    android:paddingTop="15sp"
    android:paddingBottom="15sp"
    tools:context="com.testing.alcatel.alufieldtesting.MobilityTests"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:paddingTop="15sp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dial"
            android:id="@+id/dial"
            android:textColor="@color/purple"
            android:textSize="15sp"
            android:textStyle="bold" />
        <EditText
            android:hint="+237 675 789 056 "
            android:clickable="true"
            android:focusable="false"
            android:id="@+id/diale"
            android:contextClickable="false"
            android:layout_marginLeft="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:orientation="vertical"
        android:paddingTop="15sp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/call_duration"
            android:id="@+id/durationm"
            android:textColor="@color/purple"
            android:textSize="15sp"
            android:textStyle="bold" />
        <EditText
            android:hint="5 seconds"
            android:layout_marginLeft="3dp"
            android:clickable="false"
            android:focusable="false"
            android:id="@+id/durationme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:orientation="vertical"
        android:paddingTop="15sp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/iteration"
            android:id="@+id/iterationm"
            android:textColor="@color/purple"
            android:textSize="15sp"
            android:textStyle="bold" />
        <EditText
            android:hint="5 seconds"
            android:layout_marginLeft="3dp"
            android:clickable="false"
            android:focusable="false"
            android:id="@+id/iterationme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="OK"
        android:id="@+id/btn_ok"
        android:layout_gravity="right"
        android:textColor="@color/purple" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/notokay"
        android:textColor="@color/purple"
        android:layout_marginTop="14dp"
        android:id="@+id/back"
        android:layout_marginLeft="5dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:background="#33c8c8c8"
        android:layout_weight="0.08" />


</LinearLayout>
